# sample-csv-converter

./: .gitignore  Cargo.toml  README.md
sample/: input.csv
src/: lib.rs  main.rs
src/commands/: config.rs  generate.rs  mod.rs
src/commands/generate/: mod.rs
src/commands/generate/model/: mastar_a.rs  mod.rs  source_record.rs  source_record_dto.rs  source_records.rs  transaction_b.rs  transaction_c.rs
src/cui/: mod.rs  options.rs
